# tycho-api

./: Cargo.toml
src/api/: routes.rs  ws.rs
src/errors/: mod.rs
src/simulation/: state.rs
