[package]
name = "tycho-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Simulation dependencies
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation", rev = "79346a1" }
num-bigint = "0.4"
# Matching version of alloy-primitives used by tycho-simulation; https://github.com/propeller-heads/tycho-simulation/blob/79346a177e8e2209148b2ed6ca20bd18deb71bb7/Cargo.toml#L47
alloy-primitives = { version = "0.8.9", features = [
    "getrandom",
    "rand",
    "map-foldhash",
] }
# API and WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and environmental stuff
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
